# plants-grow

./: .gitignore  .isort.cfg  README.md  docker-compose.yml.jinja2
camera/src/camera/: __main__.py
diagnostics/src/diagnostics/: __main__.py
host_files/: create_google_token.py
illumination/src/illumination/: __main__.py
notification/: Dockerfile  pyproject.toml  requirements.txt
notification/src/notification/: __main__.py  service.py
notification/src/notification/mail/: abstract_mailbox.py  mail.py  severity.py
notification/src/notification/mail/gmail/: creds.py  mailbox.py
