[build-system]
requires = ["setuptools>=70.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "notification"
version = "0.0.1"
authors = [
  { name="lombo-cmyk"},
]
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
  "test_*.py",
]
